# ticky

./: .gitignore  README.md  Start Ticky.cmd  Start Ticky.command  design-qa.md  pyproject.toml  ticky
.github/workflows/: ci.yml
src/ticky_cli/: __init__.py  cli.py  config.py  credentials.py  harnesses.py  mcp.py  ollama_api.py  providers.py  runtime.py  session.py  setup_wizard.py  wizard.py
tests/: test_config.py  test_credentials.py  test_harnesses.py  test_launcher.py  test_mcp_runtime.py  test_ollama_api.py  test_providers.py  test_session.py  test_setup.py  test_ticky.py  test_wizard.py
widget/macos/: TickyWidget.swift
