[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ticky-cli"
version = "1.1.0"
description = "Cross-platform subagent tools for MCP-capable LLM harnesses"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
ticky = "ticky_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
